alignment fixes

--- a/python/static/css/styles.css
+++ b/python/static/css/styles.css
@@ -34,7 +34,7 @@ html, body {
     color: var(--color-foreground);
 }
 main {
-    padding: var(--gutter);
+    padding: var(--small-gutter) var(--gutter) var(--gutter) var(--gutter);
 }
 
 h1, h2, h3, label, a {
@@ -43,7 +43,7 @@ h1, h2, h3, label, a {
     color: var(--color-foreground);
     opacity: 0.5;
     font-weight: 800;
-    margin: 0 0 var(--tiny-gutter) 0;
+    margin: 0 0 var(--small-gutter) 0;
 }
 
 button, input {
